# json2csv

./: .gitignore  LICENSE  README.md  config.py  flatten.py  helpers.py  main.py  mapping.py  prototype.py  pyproject.toml  requirements.txt  stack.py  utils.py
src/json2tab/: __init__.py  __main__.py  config.py  flatten.py  helpers.py  mapping.py  utils.py
tests/: tests.py
