[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json2tab"
version = "0.1.0-alpha"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Convert newline-delimited, highly nested JSON files to tabular file format"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.3",
    "ijson==3.1.4",
    "tqdm==4.64.0"
]

[project.scripts]
json2tab='json2tab:main'

[project.urls]
"Homepage" = "https://github.com/mpac-nguyenso/json-parsing"
"Bug Tracker" = "https://github.com/mpac-nguyenso/json-parsing/issues"